bug fix for pagination when user jumps ahead 1+ page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -150,6 +150,7 @@ a:hover {
   background-color: var(--teal);
   color: var(--white);
   text-align: center;
+  height: 25px;
 }
 
 #search-box::placeholder {
